@startuml game-library
hide circle
skinparam classAttributeIconSize 0
title Game Library
class User {
  +userId: UUID
  +email: string
  +username: string
  +passwordHash: string
  +role: Role
  +isBanned: bool
  +displayName: string
  +avatarUrl: string
}

class Game {
  +gameId: UUID
  +title: string
  +price: decimal
  +discountPercent: int
  +status: GameStatus
  +rejectionReason: string
}

class Order {
  +orderId: UUID
  +orderDate: datetime
  +totalAmount: decimal
}

class OrderItem {
  +orderItemId: UUID
  +purchasePrice: decimal
  +discountApplied: int
}

User "1" --> "0..*" Order : places
Order "1" --> "1..*" OrderItem : contains
OrderItem "1" --> "1" Game : for
@enduml
